# zoomer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
docs/: package-lock.json  package.json
docs/posts/: index.md
docs/posts/.vitepress/: config.mts
src/: app.rs  build.rs  capture.rs  config.rs  input.rs  main.rs  math.rs  renderer.rs  window.rs
src/shaders/: frag.glsl  vert.glsl
